create model user and controller login , register accout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
     // "noFallthroughCasesInSwitch": true,
     // "noPropertyAccessFromIndexSignature": true,
 
+    // Module Resolution Options
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
