--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT=8080
 DATABASE=mongodb+srv://goparkdb:<PASSWORD>@cluster0.hek0n.mongodb.net/GoMessDB?retryWrites=true&w=majority
 DATABASE_PASSWORD=ni1pQeL6WPY3TPKW
 API_PREFIX=/api/v1
+
+
+JWT_SECRET_KEY=My_SECRET_KEY_IS_VERY_LOW_SECURE_PLEASE_CHANGE_IT
+JWT_EXPIRES_IN=7d
