--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 PORT=8080
-DATABASE=mongodb+srv://goparkdb:<PASSWORD>@cluster0.hek0n.mongodb.net/GoMessDB?retryWrites=true&w=majority
-DATABASE_PASSWORD=ni1pQeL6WPY3TPKW
+DATABASE=mongodb+srv://goparkdb:ni1pQeL6WPY3TPKW@cluster0.hek0n.mongodb.net/GoMessDB?retryWrites=true&w=majority
 API_PREFIX=/api/v1
 
 
 JWT_SECRET_KEY=My_SECRET_KEY_IS_VERY_LOW_SECURE_PLEASE_CHANGE_IT
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_SECRET=My_REFRESH_SECRET_KEY_IS_VERY_LOW_SECURE_PLEASE_CHANGE_IT
-JWT_REFRESH_EXPIRES_IN=7d
+JWT_REFRESH_EXPIRES_IN=30d
