docs: add swagger docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
 
     // Module Resolution Options
     "typeRoots": ["./node_modules/@types", "./src/types"],
+    "resolveJsonModule": true,
 
     // Recommended Options
     "strict": true,
