--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.9"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.5.2",
     "@types/socket.io": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
