--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run build && nodemon dist/server.js",
+    "dev": "nodemon",
     "build": "tsc",
-    "start": "nodemon dist/server.js",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
