feat: upload file/image/video to CLOUDINARY for message feature

--- a/.env
+++ b/.env
@@ -8,4 +8,9 @@ JWT_EXPIRES_IN=1m
 JWT_REFRESH_SECRET=My_REFRESH_SECRET_KEY_IS_VERY_LOW_SECURE_PLEASE_CHANGE_IT
 JWT_REFRESH_EXPIRES_IN=30d
 
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=dpo8kviqu
+CLOUDINARY_API_KEY=264221645348166
+CLOUDINARY_API_SECRET=W1GoK2T24SXo8HJce7yhCR1b7A8
+
 CLIENT_URL=http://localhost:5173
