--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 PORT=8080
 DATABASE=mongodb+srv://goparkdb:ni1pQeL6WPY3TPKW@cluster0.hek0n.mongodb.net/GoMessDB?retryWrites=true&w=majority
 API_PREFIX=/api/v1
